import java.util.ArrayList;

public class User {

    private int age;
    private String username;
    private String password;
    private static int ID;

    private ArrayList<watchedMovies> setefilm = new ArrayList<>;
    private ArrayList<savedMovies> gemteFilm = new ArrayList<>;

    public void login() {

    }

    public void watchedMovies() {

    }

    public void savedMovies() {

    }


    public void setwatchedMovies(ArrayList watchedMovies) {

    }

    public void setsavedMovies(ArrayList SavedMovies){

    }

    public User(int age, String username, String password){

    }
}
