@startuml
'https://plantuml.com/class-diagram

class Main{
- static Main main
+ static void main()
}

class nav {
+ File FileIO;
+ textUI;

}

Main <-- nav



class textFileIO{
+ ArrayList <String> readtextSeries()
+ ArrayList <String> readtextFilm()
+ ArrayList <String> readtextUser()
+ String fileException()
}

class textUI{
- Scanne scan
+ String getUserInput(String msg)
+ int getUserInput(int msg)
+ ArrayList<String> getUserInput(String msg, int iterations)

}
class user{
- int age
- String username
- String password
- ArrayList watchedMovies
- ArrayList savedMovies
- static int ID
..
+ void login()
+ void logout()
- String signup()
+ watchedMovies()
+ savedMovies()
..
+ user()
+ int password
+ String username
+ String password
}



nav <-- Movie
nav <-- Serie
nav <-- user
nav <-- textFileIO
nav <-- textUI

class Movie{
- Static int ID
+ int year
+ get String title()
+ int year()
+ get ArrayList category()
+ get float rating()
+ play ()
}

class Serie{
- static int ID
+ int startDate
+ int endDate
+ get String title()
+  int range(int startDate int endDate)
+ get ArrayList category()
+ get float rating()
+ ArrayList Season[][]
+ play (ArrayList Season[][])
}


object textUser{
ID
}



object textFilm{
Name
Year
Category
Rating
}

object textSeries{
Name
startDate
endDate
Category
Rating
}


Content <-- Serie
Content <-- Movie

abstract Content{
+ String title
+ ArrayList category
+ Float rating
}


textFileIO <-- textFilm
textFileIO <-- textUser
textFileIO <-- textSeries

@enduml